<resources>
    <string name="app_name">Offline Wordle</string>
    <string name="titlebar_title">Offline Wordle</string>
    <string name="correct_label">In word</string>
    <string name="incorrect_label">Not in word</string>
    <string name="enter_word">Enter 5 letter word</string>
    <string name="invalid_length">Word must be 5 letters long</string>
    <string name="invalid_entry">Word must contain only characters (no spaces)</string>
    <string name="invalid_word">Word is not in the word list</string>
    <string name="reset">Reset</string>
    <string name="win_text">You guessed correctly!</string>
    <string name="lose_text">The correct word is</string>
    <string name="check">Check</string>
    <string name="help">Help</string>
    <string name="help_title">Instructions</string>

    <string name="help_instructions">- You have 6 tries to guess the hidden word
    \n\n- Guesses must be a valid 5 letter word. Press the floating check button to submit your guess
    \n\n- If you entered a valid guess The color of the tiles will change to clue you in on how close your guess was</string>

    <string name="color_help_instructions_green_green_text">GREEN</string>
    <string name="color_help_instructions_green">means that the letter is in the word and is in the correct spot</string>
    <string name="color_help_instructions_yellow_yellow_text">YELLOW</string>
    <string name="color_help_instructions_yellow">means that the letter is in the word but in the wrong spot</string>
    <string name="color_help_instructions_gray_gray_text">GRAY</string>
    <string name="color_help_instructions_gray">means that the letter is not in the word</string>
</resources>