<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".HelpFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/titlebar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@color/purple_500"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:scaleX="1.5"
            android:scaleY="1.5"
            android:src="@drawable/ic_back"
            android:clickable="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <TextView
            android:id="@+id/titlebar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:scaleX="1.5"
            android:scaleY="1.5"
            android:shadowColor="@color/white"
            android:text="@string/titlebar_title"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold|italic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/help_main_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/help_title"
        android:textSize="32sp"
        android:textStyle="bold"
        android:textColor="@color/instruction_header_text_color"
        app:layout_constraintTop_toBottomOf="@id/titlebar_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/help_main_instructions"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:text="@string/help_instructions"
        android:textSize="16sp"
        android:textColor="@color/instruction_text_color"
        app:layout_constraintTop_toBottomOf="@id/help_main_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/help_text_green"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="24dp"
        android:text="@string/color_help_instructions_green_green_text"
        android:textColor="@color/correct_green"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/help_main_instructions" />

    <TextView
        android:id="@+id/help_text_green_instructions"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:text="@string/color_help_instructions_green"
        android:textSize="16sp"
        android:textColor="@color/instruction_text_color"
        app:layout_constraintStart_toStartOf="@id/help_text_yellow_instructions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/help_text_green"
        app:layout_constraintBottom_toBottomOf="@id/help_text_green"/>

    <TextView
        android:id="@+id/help_text_yellow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginStart="24dp"
        android:text="@string/color_help_instructions_yellow_yellow_text"
        android:textColor="@color/almost_correct_yellow"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/help_text_green" />

    <TextView
        android:id="@+id/help_text_yellow_instructions"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="24dp"
        android:text="@string/color_help_instructions_yellow"
        android:textSize="16sp"
        android:textColor="@color/instruction_text_color"
        app:layout_constraintStart_toEndOf="@id/help_text_yellow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/help_text_yellow"
        app:layout_constraintBottom_toBottomOf="@id/help_text_yellow"/>

    <TextView
        android:id="@+id/help_text_gray"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="24dp"
        android:text="@string/color_help_instructions_gray_gray_text"
        android:textColor="@color/incorrect_gray"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/help_text_yellow" />

    <TextView
        android:id="@+id/help_text_gray_instructions"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:text="@string/color_help_instructions_gray"
        android:textSize="16sp"
        android:textColor="@color/instruction_text_color"
        app:layout_constraintStart_toStartOf="@id/help_text_yellow_instructions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/help_text_gray"
        app:layout_constraintBottom_toBottomOf="@id/help_text_gray" />






</androidx.constraintlayout.widget.ConstraintLayout>